# Interface-mobile

./: getfilm.m  init.m  plot_U.m  plot_all.m  plot_energ_err.m  plot_error.m
Sim/: CMakeLists.txt  domain.cpp  domain.hpp  simulation.cpp  simulation.hpp  userprefs.cmake
batt_wave/: CMakeCache.txt  CMakeLists.txt  Makefile  chg_var.txt  cmake_install.cmake  compile_commands.json  data.txt  data_batterie.txt  main.cpp  print.txt
batt_wave/batterie_data/: data_celerite.txt  data_celerite2.txt  data_impedance.txt  data_impedance2.txt  data_standard.txt
matlab/: getfilm.m  init.m  plot_U.m  plot_all.m  plot_energ_err.m  plot_error.m
wave_opt/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  data.txt  main.cpp  print.txt
